force-app/main/default/objects/Rpl_Training_Module__c/fields/Rpl_Main_Topic__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Main_Topic__c</fullName>
    <label>Main Topic</label>
    <length>80</length>
    <type>Text</type>
</CustomField>