force-app/main/default/objects/Rpl_Training_Module__c/fields/Rpl_No_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Rpl_No_of_Hours__c</fullName>
    <label>No of Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>