force-app/main/default/objects/Rpl_Training_Module__c/fields/Rpl_School__c.field-meta.xml
<CustomField>
    <fullName>Rpl_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Modules</relationshipLabel>
    <relationshipName>Training_Modules</relationshipName>
    <type>Lookup</type>
</CustomField>