force-app/main/default/objects/Rpl_Training_Module__c/fields/Rpl_Semester__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Semester__c</fullName>
    <label>Semester</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>