force-app/main/default/objects/Rpl_Training_Module__c/fields/Rpl_Sub_Topic__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Sub_Topic__c</fullName>
    <label>Sub Topic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>