force-app/main/default/objects/Rpl_Training_Module__c/fields/Rpl_Target__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Target__c</fullName>
    <label>Target</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>