force-app/main/default/objects/Rpl_Training_Module__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rpl_School__c</columns>
    <columns>Rpl_Semester__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>